<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_menu_title_bottom_margin"
            android:layout_marginTop="@dimen/main_menu_title_top_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="45sp"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/mainMenuOrganism0"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="false"
            android:scaleType="fitXY" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainMenuContinueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_menu_button_side_margin"
            android:layout_marginRight="@dimen/main_menu_button_side_margin"
            android:text="@string/main_menu_continue" />

        <ImageView
            android:id="@+id/mainMenuOrganism1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainMenuNewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_menu_button_side_margin"
            android:layout_marginRight="@dimen/main_menu_button_side_margin"
            android:layout_marginTop="@dimen/main_menu_button_bottom_margin"
            android:text="@string/main_menu_new" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainMenuHowToPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_menu_button_side_margin"
            android:layout_marginRight="@dimen/main_menu_button_side_margin"
            android:layout_marginTop="@dimen/main_menu_button_bottom_margin"
            android:text="@string/main_menu_how_to_play" />

        <ImageView
            android:id="@+id/mainMenuOrganism2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainMenuStatsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_menu_button_side_margin"
            android:layout_marginRight="@dimen/main_menu_button_side_margin"
            android:layout_marginTop="@dimen/main_menu_button_bottom_margin"
            android:text="@string/main_menu_statistics" />

    </RelativeLayout>

     <Button
         android:id="@+id/mainMenuSettingsButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/main_menu_button_side_margin"
         android:layout_marginRight="@dimen/main_menu_button_side_margin"
         android:layout_marginTop="@dimen/main_menu_button_bottom_margin"
         android:text="@string/main_menu_settings" />

     <ImageView
         android:id="@+id/mainMenuOrganism3"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_gravity="right"
         android:layout_marginRight="40dp"
         android:adjustViewBounds="false"
         android:scaleType="fitXY" />

     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <ImageView
                 android:id="@+id/mainMenuOrganism4"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="40dp"
                 android:adjustViewBounds="false"
                 android:scaleType="fitXY" />

         </TableRow>

         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
         </TableRow>
     </TableLayout>

 </LinearLayout>